Opened 9 years ago

Closed 9 years ago

#12604 closed bug (fixed)

[regression] Issue with button labels in WonderBrush

Reported by: humdinger Owned by: looncraz
Priority: blocker Milestone: R1/beta1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev50036.

WonderBrush recently started to show a drawing issue with some button labels:

lable drawing issue in WonderBrush

It appears in the floating windows for new and resizing canvas and renaming layers.
I'll assign to stippi so he may have a look what's exactly in WonderBrush's code, though it's of course all looncraz' fault. :)

Attachments (4)

wonderbrush_resize.png (5.2 KB ) - added by humdinger 9 years ago.
lable drawing issue in WonderBrush
SoundPlay_Buttons_Trouble.png (41.7 KB ) - added by Giova84 9 years ago.
BButton-Augment-12604.patch (4.0 KB ) - added by looncraz 9 years ago.
Augmented Patch - SetButtonColor, SetLabelColor
Patch-12604.patch (813 bytes ) - added by looncraz 9 years ago.
Simplest fix

Download all attachments as: .zip

Change History (16)

by humdinger, 9 years ago

Attachment: wonderbrush_resize.png added

lable drawing issue in WonderBrush

comment:1 by waddlesplash, 9 years ago

Milestone: UnscheduledR1/beta1
Priority: normalblocker
Summary: Issue with button labels in WonderBrush[regression] Issue with button labels in WonderBrush

WB doesn't use the Layout Kit (or to my knowledge any Haiku-specific code) so this obviously is broken BeOS compatibility. Making a blocker.

comment:2 by Giova84, 9 years ago

Just for the record: also SoundPlay shows the same issue.

by Giova84, 9 years ago

comment:3 by vidrep, 9 years ago

I'm seeing the same issue with buttons in the Printing dialog - the text within the button cannot be easily read.

comment:4 by diver, 9 years ago

Cc: looncraz added

comment:5 by looncraz, 9 years ago

I'll look into this in the next couple of days, I've been preoccupied.

comment:6 by dsizzle, 9 years ago

I had that happen with WebPositive. It wasn't just buttons but also text fields. It was an interesting challenge entering a comment on a trac bug...I had to type blind and rely on the Preview pane!

comment:7 by looncraz, 9 years ago

I have looked into this, and it's a simple matter of creating new API or losing new features (probably will be the latter, as no one ever responded to my requests for feedback on new additions to BButton's API).

Time is not my friend right now, but I'll try to get on this next week.

This, however, this seems to not be related to anything other than BButton. Seeme programs set BButton's high color for some reason, and that becomes the new text color of the button - which is a new feature.

I didn't want to make a quick patch to do that until I investigate if I am correct.

comment:8 by waddlesplash, 9 years ago

Cc: looncraz removed
Owner: changed from stippi to looncraz
Status: newassigned

by looncraz, 9 years ago

Attachment: BButton-Augment-12604.patch added

Augmented Patch - SetButtonColor, SetLabelColor

comment:9 by looncraz, 9 years ago

patch: 01

in reply to:  9 ; comment:10 by looncraz, 9 years ago

Replying to looncraz:

Only one of these patches should be applied, not both.

in reply to:  10 comment:11 by looncraz, 9 years ago

Replying to looncraz:

Replying to looncraz:

Only one of these patches should be applied, not both.

The minimum patch, interestingly, caused a bug with the default button colors. I am investigating it.

UPDATE: ignore that, I'm seeing the problem without either of the patches applied, needs more investigation.

UPDATE 2: Phantom issue with the simple patch, it was caused by the more complex patch. That would be better suited to a feature-add anyway, rather than a patch to this problem. I updated the simple patch to be the simplest form that resolves the observed issue.

Last edited 9 years ago by looncraz (previous) (diff)

by looncraz, 9 years ago

Attachment: Patch-12604.patch added

Simplest fix

comment:12 by waddlesplash, 9 years ago

Resolution: fixed
Status: assignedclosed

Applied in hrev50421. Thanks!

Note: See TracTickets for help on using tickets.